# libSDL2_gfxutils

./: README.rst  index.html  params.json
libsdl2_gfxutils-2.0.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
libsdl2_gfxutils-2.0.0/Doc/: .buildinfo
libsdl2_gfxutils-2.0.0/Doc/.doctrees/: SDL2_gfxutils_Defined_types.doctree  SDL2_gfxutils_Displaying_utils.doctree  SDL2_gfxutils_Forms_generating_utils.doctree  SDL2_gfxutils_Geometry_utils.doctree  SDL2_gfxutils_Measures_utils.doctree  SDL2_gfxutils_Miscellaneous_utils.doctree  SDL2_gfxutils_Operations_utils.doctree  SDL2_gfxutils_Presentation.doctree  SDL2_gfxutils_Settings_utils.doctree  environment.pickle  index.doctree
libsdl2_gfxutils-2.0.0/Doc/doctrees/: SDL2_gfxutils_Base_functions.doctree  SDL2_gfxutils_Defined_types.doctree  SDL2_gfxutils_Displaying_utils.doctree  SDL2_gfxutils_Forms_generating_utils.doctree  SDL2_gfxutils_Getters_utils.doctree  SDL2_gfxutils_Header_file.doctree  SDL2_gfxutils_Images_gallery.doctree  SDL2_gfxutils_Miscellaneous_utils.doctree  SDL2_gfxutils_Operations_utils.doctree  SDL2_gfxutils_Presentation.doctree  SDL2_gfxutils_Setters_utils.doctree  SDL2_gfxutils_Utils.doctree  environment.pickle  index.doctree
libsdl2_gfxutils-2.0.0/Doc/html/: .buildinfo  SDL2_gfxutils_Base_functions.html  SDL2_gfxutils_Defined_types.html  SDL2_gfxutils_Displaying_utils.html  SDL2_gfxutils_Forms_generating_utils.html  SDL2_gfxutils_Getters_utils.html  SDL2_gfxutils_Header_file.html  SDL2_gfxutils_Images_gallery.html  SDL2_gfxutils_Miscellaneous_utils.html  SDL2_gfxutils_Operations_utils.html  SDL2_gfxutils_Presentation.html  SDL2_gfxutils_Setters_utils.html  SDL2_gfxutils_Utils.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
libsdl2_gfxutils-2.0.0/Doc/html/_downloads/: base_functions.c
libsdl2_gfxutils-2.0.0/Doc/html/_sources/: SDL2_gfxutils_Base_functions.txt  SDL2_gfxutils_Defined_types.txt  SDL2_gfxutils_Displaying_utils.txt  SDL2_gfxutils_Forms_generating_utils.txt  SDL2_gfxutils_Getters_utils.txt  SDL2_gfxutils_Header_file.txt  SDL2_gfxutils_Images_gallery.txt  SDL2_gfxutils_Miscellaneous_utils.txt  SDL2_gfxutils_Operations_utils.txt  SDL2_gfxutils_Presentation.txt  SDL2_gfxutils_Setters_utils.txt  SDL2_gfxutils_Utils.txt  index.txt
libsdl2_gfxutils-2.0.0/Examples/balls/: balls.c
libsdl2_gfxutils-2.0.0/Examples/balls_trajectory/: balls_trajectory.c
libsdl2_gfxutils-2.0.0/Examples/gfxutils-screensaver/: gfxutils-screensaver.c
libsdl2_gfxutils-2.0.0/Examples/rainbow_wheel/: rainbow_wheel.c
libsdl2_gfxutils-2.0.0/Examples/snake_hypnotize/: snake_hypnotize.c
libsdl2_gfxutils-2.0.0/Examples/spiderweb/: spiderweb.c
libsdl2_gfxutils-2.0.0/Examples/watch/: ttf_utils.c  watch.c
libsdl2_gfxutils-2.0.0/Sources/: Makefile.am  Makefile.in  SDL2_gfxutils.h
libsdl2_gfxutils-2.0.0/Sources/Display/: aa_displaying.c  displaying.c  displaying_thick.c
libsdl2_gfxutils-2.0.0/Sources/Forms/: base_functions.c  fractal.c  hexa.c  penta.c  polygons.c  spiral.c  stars.c  wheel.c
libsdl2_gfxutils-2.0.0/Sources/Geometry_utils/: geometry_utils.c
libsdl2_gfxutils-2.0.0/Sources/Getters/: getters.c
libsdl2_gfxutils-2.0.0/Sources/Miscellaneous/: trajectory.c
libsdl2_gfxutils-2.0.0/Sources/Operations/: form_operations.c  pixel_operations.c
libsdl2_gfxutils-2.0.0/Sources/Setters/: setters.c
libsdl2_gfxutils-2.0.0/Sources/Utils/: check.c  memory.c
