SUBDIRS = ./Sources 

EXTRA_DIST = Doc \
             License \
             Examples


nobase_pkgdata_DATA = ./Doc/doctrees/*.doctree \
                      ./Doc/html/*.html \
                      ./Doc/html/*.inv \
                      ./Doc/html/*.js \
                      ./Doc/html/_downloads/*.c \
                      ./Doc/html/_images/*.png \
                      ./Doc/html/_sources/*.txt \
                      ./Doc/html/_static/*.gif \
                      ./Doc/html/_static/*.css \
                      ./Doc/html/_static/*.png \
                      ./Doc/html/_static/*.js \
                      ./License/SDL2_gfxutils/*.txt \
                      ./License/SDL2_gfxutils_documentation/*.txt \
                      ./Examples/balls/*.c \
                      ./Examples/balls_trajectory/*.c \
                      ./Examples/gfxutils-screensaver/*.c \
                      ./Examples/rainbow_wheel/*.c \
                      ./Examples/snake_hypnotize/*.c \
                      ./Examples/watch/*.c \
                      ./Examples/watch/*.ttf \
                      ./Examples/spiderweb/*.c


ACLOCAL_AMFLAGS = -I m4
