AUTOMAKE_OPTIONS = subdir-objects

lib_LTLIBRARIES = libSDL2_gfxutils.la

libSDL2_gfxutils_la_SOURCES = 	Display/aa_displaying.c \
				Display/displaying.c \
				Display/displaying_thick.c \
				Forms/wheel.c \
				Forms/hexa.c \
				Forms/stars.c \
				Forms/fractal.c \
				Forms/polygons.c \
				Forms/penta.c \
				Forms/base_functions.c \
				Forms/spiral.c \
				Geometry_utils/geometry_utils.c \
				Getters/getters.c \
				Miscellaneous/trajectory.c \
				Operations/form_operations.c \
				Operations/pixel_operations.c \
				Setters/setters.c \
				Utils/check.c \
				Utils/memory.c

libSDL2_gfxutils_la_LDFLAGS = -version-info 2:0:0

libSDL2_gfxutils_la_LIBADD = $(LIBS)

include_HEADERS = SDL2_gfxutils.h



